# my_bash_history_combiner

./: .rustfmt.toml  Cargo.toml
src/: main.rs
