[package]
name = "my_bash_history_combiner"
version = "0.0.1"
description = "Combines a Bash session history with a single history with dups and ignores erased."
authors = ["Derick Eddington"]
license = "Unlicense"
repository = "https://github.com/DerickEddington/my_bash_history_combiner"
edition = "2021"
categories = ["command-line-utilities"]  # TODO
keywords = []  # TODO

[[bin]]
name = "my-bash_history-combiner"
path = "src/main.rs"

[dependencies]
regex = "1.9.1"
